--- a/README
+++ b/README
@@ -1,9 +1,4 @@
-Creative Commons Non Commercial 3.0 License
-Icon images from iconmonstr.com see website for license terms
-Some additional icons from metroicon.net courtesy of Piers
-
-My Modfications to the Skin.arctic.zephyr.plus MOD 
-Changes 
+My Modfications to the Skin.arctic.zephyr.plus  
 
 * Added Pandora Thumbs up and Down buttons in Music OSD  
     (1080i/Includes_OSD.xml)
