--- a/README
+++ b/README
@@ -7,3 +7,5 @@ My Modfications to the Skin.arctic.zephyr.plus
     (1080i/MyWeather.xml)
     (1080i/SkinSettings.xml)
 
+*Changed max widgets to 20 (original was 10) 
+
