--- a/README
+++ b/README
@@ -8,4 +8,4 @@ My Modfications to the Skin.arctic.zephyr.plus
     (1080i/SkinSettings.xml)
 
 *Changed max widgets to 20 (original was 10) 
-
+    (shortcuts/template.xml)
